Refactore movie.getGenre zu movie.getStringGenre HomeController allgenre enum benutzt und alte Liste gelöscht